# erlmongo

./: Makefile  Makefile.am  README.rdoc  configure.ac  erlmongo.hrl  erlmongo.spec  erlmongo_app.erl  index.html  mongoapi.erl  mongodb.erl  rebar.config
ebin/: erlmongo.app
src/: bson.erl  erlmongo.app.src  erlmongo.hrl  mongoapi.erl  mongodb.erl  mongodb_supervisor.erl
