AC_PREREQ(2.57)
AC_INIT(erlmongo, 0.0.9, sergej.jurecko@wpn.tv)
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_SRCDIR([src/erlmongo.hrl])
AM_INIT_AUTOMAKE(foreign tar-ustar)
AC_ERLANG_PATH_ERL
AC_ERLANG_PATH_ERLC
AC_ERLANG_SUBST_INSTALL_LIB_SUBDIR(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AC_CONFIG_FILES([
  Makefile
])
AC_OUTPUT
